[gd_scene load_steps=12 format=3 uid="uid://du33e85p5am6o"]

[ext_resource type="Script" path="res://UI/moveset_select/moveset_select.gd" id="1_a1hn6"]
[ext_resource type="Texture2D" uid="uid://cqsv7ylkcsblt" path="res://UI/shade_line.png" id="2_fi4td"]
[ext_resource type="Texture2D" uid="uid://cket1twcre8vk" path="res://store/1.png" id="2_i8yy8"]
[ext_resource type="Texture2D" uid="uid://ta2fchwvd52u" path="res://lobby/battle_button_n.png" id="4_6d2ib"]
[ext_resource type="Texture2D" uid="uid://cf23fyj8or3iq" path="res://UI/grizzly_select/refresh.png" id="5_v7rhw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qqp8g"]
texture = ExtResource("2_fi4td")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_co2bg"]
texture = ExtResource("4_6d2ib")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8b1a8"]
texture = ExtResource("5_v7rhw")

[sub_resource type="Animation" id="Animation_8t4vp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u2b0u"]
resource_name = "page_1"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cl1b"]
_data = {
"RESET": SubResource("Animation_8t4vp"),
"page_1": SubResource("Animation_u2b0u")
}

[node name="moveset_select" type="Control"]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_a1hn6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(654, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qqp8g")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Select 5 abilities to fight with!"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(654, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qqp8g")

[node name="moves" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/moves"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 46
icon = ExtResource("2_i8yy8")
flat = true
expand_icon = true

[node name="Button2" type="Button" parent="VBoxContainer/moves"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 46
icon = ExtResource("2_i8yy8")
flat = true
expand_icon = true

[node name="Button3" type="Button" parent="VBoxContainer/moves"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 46
icon = ExtResource("2_i8yy8")
flat = true
expand_icon = true

[node name="Button4" type="Button" parent="VBoxContainer/moves"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 46
icon = ExtResource("2_i8yy8")
flat = true
expand_icon = true

[node name="Button5" type="Button" parent="VBoxContainer/moves"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 46
icon = ExtResource("2_i8yy8")
flat = true
expand_icon = true

[node name="fight_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxTexture_co2bg")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -327.0
offset_right = 327.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="VBoxContainer2"]
custom_minimum_size = Vector2(654, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qqp8g")

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Select Ability!"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer2"]
custom_minimum_size = Vector2(654, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qqp8g")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="available_abilities" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_8b1a8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6cl1b")
}

[connection signal="pressed" from="VBoxContainer/fight_button" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
